--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" sizes="152x152" href="resources/duo.png" >
     <title>Duo3.0</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
